--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@
 				<div class="owl-item">
 					<div class="slider_background" style="background-image:url(/static/images/home_slider_1.jpg)"></div>
 					<div class="home_slider_content text-center">
-						<h1>A new World is coming</h1>
-						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
-						<div class="link_button home_slider_button"><a href="#">read more</a></div>
+						<h1>View Live Stocks</h1>
+						<div class="home_slider_text">View live stocks in real time from markets all across.</div>
+						<div class="link_button home_slider_button"><a href="http://cmpe285-nst.tk/assignment2">Try it</a></div>
 					</div>
 				</div>
 
@@ -42,8 +42,8 @@
 					<div class="slider_background" style="background-image:url(/static/images/home_slider_1.jpg)"></div>
 					<div class="home_slider_content text-center">
 						<h1>Stock Profit Calculator</h1>
-						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
-						<div class="link_button home_slider_button"><a href="/slider2">Try It</a></div>
+						<div class="home_slider_text">Calculate your stock profits from our wide catalogue of markets </div>
+						<div class="link_button home_slider_button"><a href="http://cmpe285-nst.tk/assignment1">Try It</a></div>
 					</div>
 				</div>
 
@@ -51,21 +51,12 @@
 				<div class="owl-item">
 					<div class="slider_background" style="background-image:url(/static/images/home_slider_1.jpg)"></div>
 					<div class="home_slider_content text-center">
-						<h1>A new World is coming</h1>
-						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
-						<div class="link_button home_slider_button"><a href="#">read more</a></div>
+						<h1>More updates are on the way</h1>
+						<div class="home_slider_text">Check back in for incoming updates!</div>
 					</div>
 				</div>
 
-				<!-- Slider Item -->
-				<div class="owl-item">
-					<div class="slider_background" style="background-image:url(/static/images/home_slider_1.jpg)"></div>
-					<div class="home_slider_content text-center">
-						<h1>A new World is coming</h1>
-						<div class="home_slider_text">Donec vel ante rhoncus, posuere nulla quis, interdum nisi. Vestibulum laoreet lacinia diam, eget blandit sem gravida at.</div>
-						<div class="link_button home_slider_button"><a href="#">read more</a></div>
-					</div>
-				</div>
+
 
 			</div>
 
@@ -165,7 +156,7 @@
 									</ul>
 								</div>
 								<div class="main_menu_contact ml-auto">
-									<div class="main_menu_phone"><img src="/static/images/phone-call.svg" alt=""><span>+825 25 800 800</span></div>
+									<div class="main_menu_phone"><img src="/static/images/phone-call.svg" alt=""><span>+8Fsu</span></div>
 									<div class="main_menu_email"><img src="/static/images/envelope.svg" alt=""><span>office@invest.com</span></div>
 									<div class="main_menu_search">
 										<div class="main_menu_search_button">
@@ -252,7 +243,7 @@
 							<h1 class="intro_title">Stock Portfolio Suggestion Engine</h1>
 						</div>
 						<div class="intro_text">
-							<p>Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit.Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobo rtis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Morbi ut dapibus dui. Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit.</p>
+							<p>Go ahead, try out our intuitive Stock Portfolio Suggestion Engine. Select values to see your stock quote and we'll handle the rest!</p>
 						</div>
 						<div class="link_button intro_button"><a href="/suggestion">Try It</a></div>
 					</div>
@@ -281,7 +272,7 @@
 								</a>
 							</div>
 						</div>
-						<p class="footer_about_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</p>
+						<p class="footer_about_text">This website is collection of services pertaining to financial stocks and stock profit calculations. We also offer real time stocks updates which will be followed by more updates coming soon.</p>
 					</div>
 				</div>
 
@@ -304,13 +295,13 @@
 							<input type="email" class="footer_newsletter_input" placeholder="Your E-mail" required="required">
 							<button class="footer_newsletter_button" type="submit">subscribe</button>
 						</form>
-						<div class="footer_newsletter_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</div>
+						<div class="footer_newsletter_text">Connect with us and we'll get back to you</div>
 						<div class="footer_social">
 							<ul>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://plus.google.com/u/0/114489718479320768927"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.pinterest.com/navoday91/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.reddit.com/user/FeltThrone18"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/feltthrone18"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
