--- a/templates/suggestion.html
+++ b/templates/suggestion.html
@@ -113,7 +113,7 @@
 												</a></li>
 											</ul>
 										</li>
-										<li><a href="about.html">about us
+										<li><a href="/about">about us
 											<svg version="1.1" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 												 width="9px" height="5px" viewBox="0 0 9 5" enable-background="new 0 0 9 5" xml:space="preserve">
 												<g>
@@ -363,123 +363,7 @@
 		</div>
 	</div>
 
-	<!-- Services -->
 
-	<div class="services">
-		<div class="services_background parallax-window" data-parallax="scroll" data-image-src="/static/images/services_background_2.jpg" data-speed="0.8"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col d-flex flex-row flex-wrap align-items-start justify-content-start">
-
-					<!-- Service -->
-					<div class="service">
-						<div class="service_icon"><img src="/static/images/service_1.svg" class="svg" alt=""></div>
-						<div class="service_title">Transport & Logistics Consulting</div>
-						<div class="service_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-						</div>
-						<div class="service_link"><a href="#">Read More</a></div>
-					</div>
-
-					<!-- Service -->
-					<div class="service">
-						<div class="service_icon"><img src="/static/images/service_2.svg" class="svg" alt=""></div>
-						<div class="service_title">Complete Financial Planning</div>
-						<div class="service_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-						</div>
-						<div class="service_link"><a href="#">Read More</a></div>
-					</div>
-
-					<!-- Service -->
-					<div class="service">
-						<div class="service_icon"><img src="/static/images/service_3.svg" class="svg" alt=""></div>
-						<div class="service_title">Safe & Secure Transactions</div>
-						<div class="service_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-						</div>
-						<div class="service_link"><a href="#">Read More</a></div>
-					</div>
-
-					<!-- Service -->
-					<div class="service">
-						<div class="service_icon"><img src="/static/images/service_4.svg" class="svg" alt=""></div>
-						<div class="service_title">Private Internet Banking</div>
-						<div class="service_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-						</div>
-						<div class="service_link"><a href="#">Read More</a></div>
-					</div>
-
-					<!-- Service -->
-					<div class="service">
-						<div class="service_icon"><img src="/static/images/service_5.svg" class="svg" alt=""></div>
-						<div class="service_title">Best Business Consulting</div>
-						<div class="service_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-						</div>
-						<div class="service_link"><a href="#">Read More</a></div>
-					</div>
-
-					<!-- Service -->
-					<div class="service">
-						<div class="service_icon"><img src="/static/images/service_6.svg" class="svg" alt=""></div>
-						<div class="service_title">Consumer Products Consulting</div>
-						<div class="service_text">
-							<p>Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta s sem. Duis non volutpat arcu. Sed ut iaculis elit, quis varius mauris. Integer ut ultric ies orci, lobortis egesta.</p>
-						</div>
-						<div class="service_link"><a href="#">Read More</a></div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Call Back -->
-
-	<div class="call">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="call_image"><img src="/static/images/call.jpg" alt=""></div>
-				</div>
-				<div class="col-lg-8">
-					<div class="call_container">
-						<div class="section_title_container">
-							<div class="section_subtitle">take a look at our</div>
-							<div class="section_title">Request a Call Back</div>
-						</div>
-						<div class="call_form_container">
-							<form action="#" class="call_form">
-								<div class="row">
-									<div class="col-md-6">
-										<input type="text" class="input_item" placeholder="Your Name" required="required">
-									</div>
-									<div class="col-md-6">
-										<input type="email" class="input_item" placeholder="Your E-mail" required="required">
-									</div>
-									<div class="col-md-6">
-										<input type="text" class="input_item" placeholder="Your Phone">
-									</div>
-									<div class="col-md-6">
-										<select class="dropdown_item input_item">
-											<option>Business type</option>
-											<option>Business type</option>
-											<option>Business type</option>
-										</select>
-									</div>
-									<div class="col-md-12">
-										<button id="call_btn" type="submit" class="call_button trans_200" value="Submit">submit</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<!-- Footer -->
 
@@ -493,13 +377,13 @@
 						<div class="logo_container footer_logo">
 							<div class="logo">
 								<a href="#">
-									<div class="logo_line_1"><span>in</span>vest</div>
-									<div class="logo_line_2">Blockchain</div>
+									<div class="logo_line_1"><span>CMPE</span>285</div>
+									<div class="logo_line_2">Invest</div>
 									<div class="logo_img"><img src="/static/images/logo.png" alt=""></div>
 								</a>
 							</div>
 						</div>
-						<p class="footer_about_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</p>
+						<p class="footer_about_text">This website is collection of services pertaining to financial stocks and stock profit calculations. We also offer real time stocks updates which will be followed by more updates coming soon.</p>
 					</div>
 				</div>
 
@@ -510,15 +394,6 @@
 						<ul>
 							<li><a href="#">Home</a></li>
 							<li><a href="#">About</a></li>
-							<li><a href="#">Case Studies</a></li>
-							<li><a href="#">Services</a></li>
-							<li><a href="#">Consulting</a></li>
-							<li><a href="#">Commodities</a></li>
-							<li><a href="#">Insurance</a></li>
-							<li><a href="#">Trades</a></li>
-							<li><a href="#">Planning</a></li>
-							<li><a href="#">Finance</a></li>
-							<li><a href="#">Crypto</a></li>
 						</ul>
 					</div>
 				</div>
@@ -531,13 +406,13 @@
 							<input type="email" class="footer_newsletter_input" placeholder="Your E-mail" required="required">
 							<button class="footer_newsletter_button" type="submit">subscribe</button>
 						</form>
-						<div class="footer_newsletter_text">Sed ut iaculis elit, quis varius mauris. Integer ut ultricies orci, lobortis egestas sem. Morbi ut dapibus dui. Sed ut iaculis elit. Integer ut imperdiet erat. Quisque ultricies lectus tellus, eu tristique magna pharetra nec.</div>
+						<div class="footer_newsletter_text">Connect with us and we'll get back to you</div>
 						<div class="footer_social">
 							<ul>
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://plus.google.com/u/0/114489718479320768927"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.pinterest.com/navoday91/"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.reddit.com/user/FeltThrone18"><i class="fa fa-reddit-alien" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/feltthrone18"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -560,14 +435,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="col-md-8 order-md-2 order-1">
 						<nav class="footer_nav d-flex flex-row align-items-center justify-content-md-end">
 							<ul>
-								<li><a href="index.html">Home</a></li>
+								<li><a href="#">Home</a></li>
 								<li><a href="about.html">About us</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</div>
 	</footer>
 </div>
@@ -575,14 +450,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="/static/js/jquery-3.2.1.min.js"></script>
 <script src="/static/styles/bootstrap4/popper.js"></script>
 <script src="/static/styles/bootstrap4/bootstrap.min.js"></script>
-<script src="/static/plugins/greensock/TweenMax.min.js"></script>
-<script src="/static/plugins/greensock/TimelineMax.min.js"></script>
-<script src="/static/plugins/scrollmagic/ScrollMagic.min.js"></script>
-<script src="/static/plugins/greensock/animation.gsap.min.js"></script>
-<script src="/static/plugins/greensock/ScrollToPlugin.min.js"></script>
 <script src="/static/plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
 <script src="/static/plugins/easing/easing.js"></script>
 <script src="/static/plugins/parallax-js-master/parallax.min.js"></script>
-<script src="/static/js/about_custom.js"></script>
+<script src="/static/js/custom.js"></script>
 </body>
-</html>
+</html></html>
